# frozen_string_literal: true

module BetterTogether
  # Record of a person reporting inappropriate content or users
  class Report < PlatformRecord
    # Intake fields should be chosen by the reporter, not silently filled from DB defaults.
    attribute :category, :string
    attribute :harm_level, :string
    attribute :requested_outcome, :string

    enum :category, {
      harassment: 'harassment',
      hate_speech: 'hate_speech',
      discrimination: 'discrimination',
      spam_or_scam: 'spam_or_scam',
      malware_detected: 'malware_detected',
      scan_failure: 'scan_failure',
      privacy_violation: 'privacy_violation',
      misinformation: 'misinformation',
      boundary_violation: 'boundary_violation',
      fraud: 'fraud',
      impersonation: 'impersonation',
      other: 'other'
    }, prefix: true

    enum :harm_level, {
      low: 'low',
      medium: 'medium',
      high: 'high',
      urgent: 'urgent'
    }, prefix: true

    enum :requested_outcome, {
      boundary_support: 'boundary_support',
      mediated_conversation: 'mediated_conversation',
      community_accountability: 'community_accountability',
      content_review: 'content_review',
      temporary_protection: 'temporary_protection',
      other: 'other'
    }, prefix: true

    belongs_to :reporter, class_name: 'BetterTogether::Person'
    belongs_to :reportable, polymorphic: true
    has_one :safety_case, class_name: 'BetterTogether::Safety::Case', dependent: :destroy, inverse_of: :report

    validates :reason, presence: true
    validates :category, presence: true
    validates :harm_level, presence: true
    validates :requested_outcome, presence: true
    # Dynamic extension point, not a gem-owned allow-list: a host app opts a model into
    # the safety/Report pipeline by including BetterTogether::Reportable, nothing else. See
    # docs/developers/architecture/polymorphic_allowlist_extension_audit.md
    validates :reportable_type, inclusion: {
      in: ->(_record) { BetterTogether::Reportable.included_in_models.map(&:name) }
    }
    validates :reportable_id, uniqueness: {
      scope: %i[reporter_id reportable_type],
      message: ->(_report, _data) { I18n.t('better_together.reports.errors.already_reported_by_you') }
    }

    after_create_commit :ensure_safety_case!
    after_create_commit :notify_safety_reviewers

    def case_status
      safety_case&.status || 'submitted'
    end

    private

    def ensure_safety_case!
      return if safety_case.present?

      create_safety_case!(
        category:,
        harm_level:,
        requested_outcome:,
        retaliation_risk: retaliation_risk || false,
        consent_to_contact: consent_to_contact.nil? || consent_to_contact,
        consent_to_restorative_process: consent_to_restorative_process || false
      )
    end

    def notify_safety_reviewers
      ::BetterTogether::SafetyReportNotificationService.new(self).notify_submission
    end
  end
end
